movie's and tv's scrollbar was fixed and rn redirect without any issues

--- a/src/Components/ScrollBar/ScrollBar.css
+++ b/src/Components/ScrollBar/ScrollBar.css
@@ -514,13 +514,16 @@
   display: flex;
   flex-direction: column;
   min-width: 138px;
+  max-width: 138px;
   /* height: 243px; this is prev height  need to figure out which one is proper for this card-cast-item - 243px or 220px*/
-  height: 220px;
+  /* min-height: 220px; */
+  height: fit-content;
   margin: 10px 4px 10px 10px;
   padding-bottom: 10px;
 
   border: 1px solid var(--lt-color-gray-400);
   border-radius: 10px;
+
   overflow: hidden;
 
   cursor: pointer;
@@ -535,6 +538,15 @@
   z-index: 1;
 }
 
+.scrollbar-card-cast-photo-wrapper {
+  width: 138px;
+  height: 175px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .scrollbar-card-cast-photo {
   width: 138px;
 }
@@ -543,9 +555,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 60px;
-  top: -30px;
+  /* width: 100%; */
+  /* height: 60px; */
+  /* bottom: 30px; */
   gap: 5px;
   padding: 12px 12px 12px;
 
